--- a/web-resources/style/_mixins.scss
+++ b/web-resources/style/_mixins.scss
@@ -1,9 +1,7 @@
 // Core variables and mixins
-
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
-
 
 @mixin table-col($size...) {
   @for $i from 1 through length($size) {
@@ -11,4 +9,36 @@
       width: nth($size, $i) * 1%;
     }
   }
+}
+
+@mixin border-arrow-up($size, $color) {
+  width: 0;
+  height: 0;
+  border-left: $size solid transparent;
+  border-right: $size solid transparent;
+  border-bottom: $size solid $color;
+}
+
+@mixin border-arrow-right($size, $color) {
+  width: 0;
+  height: 0;
+  border-top: $size solid transparent;
+  border-bottom: $size solid transparent;
+  border-left: $size solid $color;
+}
+
+@mixin border-arrow-left($size, $color) {
+  width: 0;
+  height: 0;
+  border-top: $size solid transparent;
+  border-bottom: $size solid transparent;
+  border-right: $size solid $color;
+}
+
+@mixin border-arrow-down($size, $color) {
+  width: 0;
+  height: 0;
+  border-left: $size solid transparent;
+  border-right: $size solid transparent;
+  border-top: $size solid $color;
 }
