--- a/src/main/resources/templates/work/view.html
+++ b/src/main/resources/templates/work/view.html
@@ -25,7 +25,7 @@
 
     <!------------------  ▼ [data-template] ▼  -------------------->
     <script type="text/html" data-template="items">
-        <tr data-element="target">
+        <tr data-element="target" data-form-enter="true">
             <td data-directive="subject"></td>
             <td data-directive="detail"></td>
             <td data-directive="count" class="text-right"></td>
