--- a/web-resources/style/work/_modules/_aside/_todo.scss
+++ b/web-resources/style/work/_modules/_aside/_todo.scss
@@ -1,6 +1,8 @@
 
-
 .todo {
+
+  $textarea-bgcolor: #4c4c4c;
+  $textarea-border-color: #3c3c3c;
 
   [data-todo] {
     margin-left: .6rem;
@@ -11,21 +13,43 @@
 
   &-add {
 
-    margin: 1rem;
-
+    display: flex;
+    > textarea, > span {
+      background-color: $textarea-bgcolor;
+      border: 1px solid $textarea-border-color;
+    }
     > textarea {
       padding: .5rem;
       width: 100%;
       height: 6rem;
-      background-color: #545252;
-      border: 1px solid #313131;
       color: #b9b9b9;
     }
 
+    > span {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      flex-grow: 1;
+      width: 3rem;
+
+      border-left: 0;
+      text-align: center;
+      font-size: 14px;
+      color: #949494;
+    }
+
+    &.form-error {
+      > span {
+        cursor: default;
+        color: #5d5d5d;
+      }
+    }
   }
 
   &-list {
-    padding: 1rem;
+
+    margin-top: 1rem;
 
     &-item {
 
@@ -38,6 +62,18 @@
       > pre {
         margin: 0;
         color: #b9b9b9;
+      }
+
+      > span {
+        font-size: 14px;
+      }
+
+      > textarea {
+        height: 5.5rem;
+        padding: .7rem;
+        width: 100%;
+        border: 1px solid $textarea-border-color;
+        background-color: $textarea-bgcolor;
       }
     }
   }
